--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
 alembic==1.0.3
+certifi==2018.10.15
+chardet==3.0.4
 Click==7.0
+decorator==4.3.2
 Flask==1.0.2
 Flask-Migrate==2.3.0
 Flask-SQLAlchemy==2.3.2
+future==0.17.1
+geocoder==1.38.1
+httpie==1.0.0
+idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.0
+Pygments==2.2.0
 python-dateutil==2.7.5
 python-editor==1.0.3
+ratelim==0.1.6
+requests==2.20.1
 six==1.11.0
 SQLAlchemy==1.2.14
+urllib3==1.24.1
 Werkzeug==0.14.1
